# chip-8-emulator

./: .gitignore  CMakeLists.txt  LICENCE  README.md
src/: CMakeLists.txt  config.h  main.c  platform.h
